[gd_scene load_steps=7 format=3 uid="uid://battle_arena_scene"]

[ext_resource type="Script" path="res://scenes/battle/battle_arena.gd" id="1_arena"]
[ext_resource type="Script" path="res://scenes/battle/battle_hud.gd" id="2_hud"]
[ext_resource type="Shader" path="res://assets/shaders/shader_arena_floor.gdshader" id="3_floor_shader"]
[ext_resource type="Shader" path="res://assets/shaders/shader_arena_ring.gdshader" id="4_ring_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ground"]
shader = ExtResource("3_floor_shader")
shader_parameter/stone_color = Color(0.15, 0.12, 0.2, 1)
shader_parameter/stone_color_alt = Color(0.08, 0.06, 0.12, 1)
shader_parameter/rune_color = Color(0.5, 0.3, 0.8, 1)
shader_parameter/rune_glow = 1.5
shader_parameter/rune_speed = 0.5
shader_parameter/tile_scale = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ring"]
render_priority = 1
shader = ExtResource("4_ring_shader")
shader_parameter/ring_color = Color(0.5, 0.3, 0.7, 1)
shader_parameter/rotation_speed = 0.8
shader_parameter/glow_strength = 2.0
shader_parameter/pattern_count = 6.0
shader_parameter/alpha_val = 0.6

[sub_resource type="Environment" id="Environment_battle"]
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.25, 0.4, 1)
ambient_light_energy = 0.8

[node name="BattleArena" type="Node3D"]
script = ExtResource("1_arena")

[node name="BattleEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_battle")

[node name="BattleGround" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
size = Vector3(12, 0.2, 8)
material = SubResource("ShaderMaterial_ground")

[node name="ArenaRing" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
radius = 5.0
height = 0.02
material = SubResource("ShaderMaterial_ring")

[node name="BattleLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 0, 10, 0)
light_color = Color(0.8, 0.75, 1, 1)
light_energy = 1.5
shadow_enabled = true

[node name="SpotlightPlayer" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, -3, 5, 0)
light_color = Color(0.6, 0.8, 1, 1)
light_energy = 2.0
spot_range = 8.0
spot_angle = 30.0

[node name="SpotlightEnemy" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 3, 5, 0)
light_color = Color(1, 0.6, 0.6, 1)
light_energy = 2.0
spot_range = 8.0
spot_angle = 30.0

[node name="PlayerMarker" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="EnemyMarker" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="BattleCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.94, 0.34, 0, -0.34, 0.94, 0, 4, 6)

[node name="BattleHUD" type="CanvasLayer" parent="."]
layer = 20
script = ExtResource("2_hud")
